--- a/parts/client/fields.jade
+++ b/parts/client/fields.jade
@@ -276,7 +276,7 @@ template(name='i')
     // img(src="https://img.icons8.com/fluent/48/000000/#{n}.png" class="#{cl} #{currentUser.invert_class}" title=t)
     // img.icon8(src="https://img.icons8.com/ios/50/000000/#{n}.png" class=cl title=t)
     // img(src="https://img.icons8.com/ultraviolet/48/000000/#{n}.png" class=cl title=t)
-    img(src="https://img.icons8.com/color/48/000000/#{n}.png" class=cl title=t)
+    img(src="https://img.icons8.com/office/48/000000/#{n}.png" class=cl title=t)
     // if cl.length
     //     img(src="https://img.icons8.com/#{gs.icon_theme}/48/000000/#{n}.png" class=cl title=t)
     // else 
